--- a/src/styles/components/Modal/Vertical/Comment.css
+++ b/src/styles/components/Modal/Vertical/Comment.css
@@ -104,11 +104,13 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: flex-start;
     margin-left : 10px;
 }
 
 .comment-item-name-n-date-container{
-    height : 8px;
+    height : 14px;
+    font-weight: 600;
     width : auto;
 }
 
